--- a/aula01.html
+++ b/aula01.html
@@ -14,11 +14,11 @@
     <div class="caixa">
         <div class="caixa1">
             <p style font-size>
-            I aint green enough, thats all
+            l<img src="https://i.redd.it/lhguaeakqqef1.jpeg" width="100%" height="100%">
             </p>
         </div>
         <div class="caixa1">
-            <img src="https://i.redd.it/lhguaeakqqef1.jpeg" width="100%" height="100%">
+            I aint green enough, thats al
         </div>
     </div>
     
