--- a/aula02.html
+++ b/aula02.html
@@ -11,7 +11,15 @@
         }
         .logo {
             color: white;
+        }
 
+        /* Estilo de lista de links*/
+        .nav-links{
+            list-style: none;
+            display: flex; /* Exibe horizontalmente o menu */
+            gap: 20px;
+            margin: 0;
+            padding: 0;
         }
     </style>
 
@@ -28,13 +36,20 @@
 
          <!-- Lista de itens de menu -->
          <ul class="nav-links" id="nav-links">
-            <li>
-                <a href="#">Início</a>
-                <a href="#">Sobre</a>
-                <a href="#">Serviços</a>
-                <a href="#">Contato </a>
+           <li>
+                <a href="https://www.amazon.com.br/">Início</a>
+           </li>
+           <li>
+                <a href="https://www.youtube.com.br/">Sobre</a>
             </li>
-         </ul>
+            <li>
+                <a href="https://www.linkedin.com.br/">Serviços</a>
+            </li>
+            <li>
+                <a href="https://www.github.com/">Contato</a>
+            </li>
+        </ul>
+            
     </nav>
 
     <div style="padding: 20px;">
